feat: add check for existing release before creating a new one

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,10 +7,19 @@ jobs:
   release:
     runs-on: ubuntu-latest
     permissions:
-        contents: write
+      contents: write
     steps:
       - uses: actions/checkout@v3
+      - name: Check if tag already exists
+        id: check_tag
+        run: |
+          if gh release view ${{ github.ref }}; then
+            echo "release_exists=true" >> $GITHUB_ENV
+          else
+            echo "release_exists=false" >> $GITHUB_ENV
+          fi
       - name: Create Release
+        if: env.release_exists == 'false'
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
